tetris/base/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: titris
  labels:
    istio-injection: enabled
