tetris/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
spec:
  selector:
    app: tetris
  ports:
    - name: http
      protocol: TCP
      port: 80
