tetris/base/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: titris-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: titris-from-ingress-virtual-service
  labels:
    from: ingress-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - titris-gateway
  http:
    - match:
        - uri:
            prefix: /titris/
      route:
        - destination:
            host: titris-service
            port:
              number: 80
